Fixed overflow, scrolling and added Discord Page

--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -6,20 +6,25 @@ body {
   padding: 0;
   text-transform: uppercase;
   width: 100%;
-  height: 100%;
-  overflow: hidden;
+  height: auto;
+  min-height: 100%;
   background: url("../../assets/background.svg");
   background-size: 3048 1714.5;
   animation: sunset 45s ease infinite;
 }
-header {
-  font-size: 20px;
-  text-align: center;
-  line-height: 1;
-  letter-spacing: 40px;
+html ::-webkit-scrollbar,
+body ::-webkit-scrollbar {
+  width: 8px;
 }
-#content {
-  text-align: left;
+html ::-webkit-scrollbar-track,
+body ::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
+  border-radius: 8px;
+}
+html ::-webkit-scrollbar-thumb,
+body ::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
 }
 canvas {
   vertical-align: top;
@@ -34,40 +39,34 @@ canvas {
 }
 hr {
   width: 100%;
-  padding: 0;
-  margin: 5;
 }
 nav {
-  font-size: 19px;
+  font-size: 18px;
   height: auto;
   width: 100%;
   color: #dfdfdf;
-  display: flex;
-  justify-content: center;
+  padding: 0px;
+  margin: 0px;
+  text-align: center;
+}
+nav div {
+  width: 100%;
+  text-align: center;
 }
 nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-flow: row wrap;
-  list-style-type: none;
-  overflow: hidden;
-  border-radius: 5px;
+  text-align: center;
 }
 nav ul li {
-  display: inline;
-  width: auto;
-  display: block;
-  color: #fff;
   text-align: center;
-  text-decoration: none;
-  border-bottom: none;
+  width: auto;
+  float: left;
 }
 nav ul li a {
   display: block;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 8px;
   background-color: #ddd;
 }
 nav ul li a:link {
@@ -85,14 +84,13 @@ nav ul li a:hover {
 }
 #wrapper {
   width: 65%;
-  height: auto;
   margin: auto;
   margin-top: 10px;
   color: #dfdfdf;
   font-family: 'Open Sans', Arial, Helvetica Neue, sans-serif;
-  font-size: 16px;
-  line-height: 1.8;
-  letter-spacing: 4px;
+  font-size: 18px;
+  line-height: 1;
+  letter-spacing: 1px;
 }
 @-moz-keyframes animStar {
   from {
@@ -128,45 +126,45 @@ nav ul li a:hover {
 }
 @-moz-keyframes sunset {
   0% {
-    background-position: 20% 50%;
+    background-position: 0% 50%;
   }
   50% {
     background-position: 100% 50%;
   }
   100% {
-    background-position: 20% 50%;
+    background-position: 0% 50%;
   }
 }
 @-webkit-keyframes sunset {
   0% {
-    background-position: 20% 50%;
+    background-position: 0% 50%;
   }
   50% {
     background-position: 100% 50%;
   }
   100% {
-    background-position: 20% 50%;
+    background-position: 0% 50%;
   }
 }
 @-o-keyframes sunset {
   0% {
-    background-position: 20% 50%;
+    background-position: 0% 50%;
   }
   50% {
     background-position: 100% 50%;
   }
   100% {
-    background-position: 20% 50%;
+    background-position: 0% 50%;
   }
 }
 @keyframes sunset {
   0% {
-    background-position: 20% 50%;
+    background-position: 0% 50%;
   }
   50% {
     background-position: 100% 50%;
   }
   100% {
-    background-position: 20% 50%;
+    background-position: 0% 50%;
   }
 }
