--- a/styles/css/styles2.css
+++ b/styles/css/styles2.css
@@ -4,14 +4,26 @@ body {
   position: absolute;
   margin: 0;
   padding: 0;
-  text-align: center;
   text-transform: uppercase;
   width: 100%;
-  height: 100%;
-  overflow: hidden;
+  height: auto;
   background: url("../../assets/background.svg");
   background-size: 3048 1714.5;
   animation: sunset 45s ease infinite;
+}
+html ::-webkit-scrollbar,
+body ::-webkit-scrollbar {
+  width: 8px;
+}
+html ::-webkit-scrollbar-track,
+body ::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
+  border-radius: 8px;
+}
+html ::-webkit-scrollbar-thumb,
+body ::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
 }
 canvas {
   vertical-align: top;
@@ -69,12 +81,11 @@ nav ul li a:hover {
 }
 #wrapper {
   width: 65%;
-  height: auto;
   margin: auto;
   margin-top: 10px;
   color: #dfdfdf;
   font-family: 'Open Sans', Arial, Helvetica Neue, sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1;
   letter-spacing: 1px;
 }
