--- a/styles/stylus.styl
+++ b/styles/stylus.styl
@@ -8,22 +8,30 @@ html, body
   position absolute
   margin 0
   padding 0
+  //text-align center
   text-transform uppercase
   width 100%
-  height 100%
-  overflow: hidden
+  height auto
+  min-height 100%
+  //overflow: hidden
   background: url('../../assets/background.svg');
   background-size 3048 1714.5
   animation sunset 45s ease infinite
 
-header
- font-size 20px
- text-align center
- line-height 1
- letter-spacing 40px
+  ::-webkit-scrollbar {
+      width: 8px;
+  }
 
-#content
- text-align left
+  ::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
+      border-radius: 8px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
+  }
+
 
 canvas
   vertical-align top
@@ -36,41 +44,35 @@ canvas
   left 0
   z-index 1
 
+
+
 hr
   width 100%
-  padding 0
-  margin 5
-
 
 nav
-  font-size 19px
+  font-size 18px
   height auto
   width 100%
   color colorWhite
-  display: flex;
-  justify-content: center;
+  padding 0px
+  margin 0px
+  text-align center
+  div
+    width 100%
+    text-align center
   ul
    list-style-type: none;
    margin: 0;
    padding: 0;
-   display: flex;
-   flex-flow: row wrap;
-   list-style-type: none;
-   overflow: hidden;
-   border-radius: 5px;
+   text-align center
    li
-    display: inline
+    //display: inline
+    text-align center
     width: auto
-    display: block;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    border-bottom: none;
+    float left
     a
      display: block;
-     padding = 15px
-     padding-left: padding;
-     padding-right padding
+     padding: 8px;
      background-color: #dddddd;
      &:link
       color colorWhite
@@ -85,14 +87,15 @@ nav
 
 #wrapper
   width bodyWidth
-  height auto
+  //height auto
   margin auto
   margin-top 10px
   color colorWhite
   font-family 'Open Sans', Arial, Helvetica Neue, sans-serif
-  font-size 16px
-  line-height 1.8
-  letter-spacing 4px
+  font-size 18px
+  line-height 1
+  letter-spacing 1px
+
 
 @keyframes animStar
   from
@@ -102,8 +105,8 @@ nav
 
 @keyframes sunset
   0%
-    background-position: 20% 50%
+    background-position: 0% 50%
   50%
     background-position: 100% 50%
   100%
-    background-position: 20% 50%
+    background-position: 0% 50%
