--- a/styles/stylus2.styl
+++ b/styles/stylus2.styl
@@ -8,14 +8,29 @@ html, body
   position absolute
   margin 0
   padding 0
-  text-align center
+  //text-align center
   text-transform uppercase
   width 100%
-  height 100%
-  overflow: hidden
+  height auto
+  //overflow: hidden
   background: url('../../assets/background.svg');
   background-size 3048 1714.5
   animation sunset 45s ease infinite
+
+  ::-webkit-scrollbar {
+      width: 8px;
+  }
+
+  ::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
+      border-radius: 8px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.9);
+  }
+
 
 canvas
   vertical-align top
@@ -27,6 +42,8 @@ canvas
   top 0
   left 0
   z-index 1
+
+
 
 hr
   width 100%
@@ -66,14 +83,16 @@ nav
 
 #wrapper
   width bodyWidth
-  height auto
+  //height auto
   margin auto
   margin-top 10px
   color colorWhite
   font-family 'Open Sans', Arial, Helvetica Neue, sans-serif
-  font-size 16px
+  font-size 18px
   line-height 1
   letter-spacing 1px
+
+
 
 @keyframes animStar
   from
